# boinc-supervisor

./: Cargo.toml  README.md
docker/: .gitignore  Dockerfile  build.sh  entrypoint.sh
src/: main.rs  msg_channel.rs
