[package]
name = "boinc-supervisor"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
description = "This application implements enough of BOINC IPC to support running simple apps without real BOINC client"
readme = "README.md"
repository = "github.com/golemfactory/boinc-supervisor/"
license = "GPL-3.0-or-later"

[dependencies]
arrayref = "0.3.6"
ctrlc = "3.1.4"
memmap = "0.7.0"
strum_macros = "0.18.0"
